primary button gaps and searchbox padding fix

--- a/main.css
+++ b/main.css
@@ -827,6 +827,12 @@ a:hover {
 }
 
 /* -------------------media queries----------------------- */
+@media only screen and (min-width: 1200px) {
+  .docsearch-button {
+    padding: 0 6px 0 10px;
+  }
+}
+
 @media (min-width: 997px) {
   .search-box {
     padding: 0rem 1rem;
